@@ -35,6 +35,7 @@
 38. Read JPEG files for Background() and mglData::Import()
 43. Spline for HCDT
 44. Exclude "TODO non-mglData"
+45. Adjust format for printed numbers (i.e. write function which will produce shortest text) + flag of fixed format + flag of TeX-notation
 
 YY. Optimize code (especially Quality=0 ?!?)
 ZZ. Update *.i for new functions {before release!!!}
@@ -70,6 +71,8 @@ C. Translate to Russian everything
 22. Docs about Polygon, Angle.
 23. Docs about mgl_check_version() and 'version'
 24. Docs about new SetTicks() and mgl_set_ticks_fact*()
+25. Notice about MGL_HAVE_C99_COMPLEX into "Installation" section.
+26. Style 'f' for fixed format (like "%.2f") in Table() and Label().
 
 ============= UDAV =============
 
